# mppi-control-implementation

./: .gitignore  Dockerfile  LICENSE  README.md  build_and_run.sh
data/: .gitignore
src/jackal_ignition/: CMakeLists.txt  package.xml
src/jackal_ignition/launch/: jackal.launch
src/jackal_ignition/models/: fortress_heightmap.sdf  heightmap.sdf  jackal.sdf  jackal.urdf.xacro  valley.sdf
src/jackal_ignition/scripts/: update_model.bash
src/model_regression/: CMakeLists.txt  package.xml  requirements.txt  setup.py
src/model_regression/data/: .gitignore
src/model_regression/scripts/: extract.py  fit.py  plot.py
src/model_regression/src/model_regression/: cost.py  extract.py
src/mppi_controller/: CMakeLists.txt  package.xml
src/mppi_controller/action/: FollowCourse.action  Waypoint.action
src/mppi_controller/config/: MPPIOptions.cfg  jackal.rviz
src/mppi_controller/include/mppi_controller/: forward_model.h  goal_evaluators.h  mppi.h  mppi_server.h  types.h  visualization.h
src/mppi_controller/launch/: demo.launch  mppi_controller.launch
src/mppi_controller/scripts/: send_goal.py
src/mppi_controller/src/: forward_model.cpp  goal_evaluators.cpp  mppi.cpp  mppi_controller_node.cpp  mppi_server.cpp  visualization.cpp
src/mppi_demo/: CMakeLists.txt  package.xml
src/mppi_demo/data/: .gitignore
src/mppi_demo/launch/: demo.launch
src/mppi_demo/scripts/: collect_course.py  follow_course.py  send_goal.py
