<?xml version="1.0"?>
<package format="2">
  <name>mppi_controller</name>
  <version>0.1.0</version>
  <description>A Model Predictive Path Integral controller w/ ROS wrappers.</description>

  <maintainer email="dms@dms.com">Daniel M. Sahu</maintainer>
  <author email="dms@dms.com">Daniel M. Sahu</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
