<?xml version="1.0"?>
<package format="2">
  <name>mppi_demo</name>
  <version>1.0.0</version>
  <description>Contains demonstration scripts and launch files for MPPI analysis.</description>
  <maintainer email="dms@dms.com">Daniel M. Sahu</maintainer>
  <author email="dms@dms.com">Daniel M. Sahu</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mppi_controller</exec_depend>
  <exec_depend>jackal_ignition</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
  </export>
</package>
